assets/chat/css/style.scss
/* ... */
.form-control:focus {
    color: $color-chat-text1;
    background: $color-surface-dark1;
    border: 1px solid lighten($color-surface-dark1, 15);
    box-shadow: none;
    outline: none;
}
.form-control[disabled],
.form-control[readonly],
.form-control::placeholder {
    color: $color-chat-place;
}
.form-control[type="text"],
textarea.form-control {
    width: 100%;
}

button.btn {
    display: inline-block;
    padding: 6px 12px;
    margin-bottom: 0;
    font-weight: normal;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    user-select: none;
    background-image: none;
    border: 1px solid transparent;
    border-radius: 4px;
}
.btn-primary {
    color: white;
    background-color: $color-btn-confirm;
    border-color: $color-btn-confirm;
}
.btn-default {
    color: $text-color3;
    background-color: $color-surface-light1;
    border-color: $color-surface-light3;
}

#import-settings-Btn {
    display: none;
}

.import-export {
    background: none;
    padding: 2px 8px 2px 8px;
    margin: 0px 5px 0px 0px;
    width: 130px;
    border: 1px solid;
    border-radius: 20px;

    text-align: center;
    color: #999999;
    font-size: 16px;
    cursor: pointer;
}

.import-export:hover {
    color: rgba(255,255,255,0.75)
}

.hidden-emote {
    background-image: none !important;
    display: inline;
    position: relative;
    padding: 0px;
    margin: 0px;
    top: 0px;
}

#chat-user-contextmenu {
    display: none;
    position: absolute;
    z-index: 235;

    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;

    border: 2px solid $color-surface-dark4;
    border-radius: 5px;

}

#contextmenu-form {
    .form-group {
        display: none;
        position: relative;
        cursor: pointer;
        padding: 6px 10px 6px 10px;

        font-size: 13px;

        background-color: $color-surface-dark2;
        &:hover {
            background-color: $color-surface-dark1;
        }
        .contextmenu-label {
            cursor: pointer;
            .btn {
                display: none;
            }
        }
    }
}

#contextmenu-viewerstate-status-container {
    display: grid;
    grid-template-columns: auto auto;

    #contextmenu-viewerstate-status-icon {
        margin: auto 5px auto 5px;
    }
    #contextmenu-viewerstate-status-text {
        margin: auto 0px auto 0px;
        line-height: 1;
    }
}

